[package]
name = "spotify-oauth"
version = "1.0.0"
authors = ["FrictionlessPortals <8077147+FrictionlessPortals@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "An implementation of the Spotify Authorization Code Flow in Rust"
documentation = "https://docs.rs/spotify-oauth/"
homepage = "https://github.com/FrictionlessPortals/spotify-oauth"
repository = "https://github.com/FrictionlessPortals/spotify-oauth"
keywords = ["spotify", "api", "oauth"]
exclude = [
    ".env.example",
    ".env",
]

[lib]
name = "spotify_oauth"
path = "src/lib.rs"

[dependencies]
url = "2.0"
rand = "0.7"
strum = "0.15"
chrono = "0.4"
reqwest = "0.9"
dotenv = "0.14"
serde_json = "1.0"
strum_macros = "0.15"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
open = "1.2"