[package]
name = "spotify-oauth"
version = "0.3.0"
authors = ["FrictionlessPortals <8077147+FrictionlessPortals@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "An implementation of the Spotify Authorization Code Flow in Rust"
documentation = "https://docs.rs/spotify-oauth/"
homepage = "https://github.com/FrictionlessPortals/spotify-oauth"
repository = "https://github.com/FrictionlessPortals/spotify-oauth"
keywords = ["spotify", "api", "oauth", "async"]
exclude = [
    ".env.example",
    ".env",
]

[lib]
name = "spotify_oauth"
path = "src/lib.rs"

[dependencies]
url = "2.1"
rand = "0.7"
strum = "0.17"
chrono = "0.4"
surf = "1.0"
base64 = "0.11"
dotenv = "0.15"
serde_json = "1.0"
strum_macros = "0.17"
snafu = "0.6"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
async-std = { version = "1.0", features = ["attributes"] }
open = "1.3"